--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -294,29 +294,29 @@ QT_FORMS_H=$(join $(dir $(QT_FORMS_UI)),$(addprefix ui_, $(notdir $(QT_FORMS_UI:
 # Most files will depend on the forms and moc files as includes. Generate them
 # before anything else.
 $(QT_MOC): $(QT_FORMS_H)
-$(qt_libnixqt_a_OBJECTS) $(qt_bitcoin_qt_OBJECTS) : | $(QT_MOC)
+$(qt_libnixqt_a_OBJECTS) $(qt_nix_qt_OBJECTS) : | $(QT_MOC)
 
 # bitcoin-qt binary #
-qt_bitcoin_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
+qt_nix_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(QR_CFLAGS)
-qt_bitcoin_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+qt_nix_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
-qt_bitcoin_qt_SOURCES = qt/main.cpp
+qt_nix_qt_SOURCES = qt/main.cpp
 if TARGET_WINDOWS
-  qt_bitcoin_qt_SOURCES += $(BITCOIN_RC)
+  qt_nix_qt_SOURCES += $(BITCOIN_RC)
 endif
-qt_bitcoin_qt_LDADD = qt/libnixqt.a $(LIBNIX_SERVER)
+qt_nix_qt_LDADD = qt/libnixqt.a $(LIBNIX_SERVER)
 if ENABLE_WALLET
-qt_bitcoin_qt_LDADD += $(LIBNIX_UTIL) $(LIBNIX_WALLET)
+qt_nix_qt_LDADD += $(LIBNIX_UTIL) $(LIBNIX_WALLET)
 endif
 if ENABLE_ZMQ
-qt_bitcoin_qt_LDADD += $(LIBNIX_ZMQ) $(ZMQ_LIBS)
+qt_nix_qt_LDADD += $(LIBNIX_ZMQ) $(ZMQ_LIBS)
 endif
-qt_bitcoin_qt_LDADD += $(LIBNIX_CLI) $(LIBNIX_COMMON) $(LIBNIX_UTIL) $(LIBNIX_CONSENSUS) $(LIBNIX_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
+qt_nix_qt_LDADD += $(LIBNIX_CLI) $(LIBNIX_COMMON) $(LIBNIX_UTIL) $(LIBNIX_CONSENSUS) $(LIBNIX_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(BDB_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
   $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)
-qt_bitcoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
-qt_bitcoin_qt_LIBTOOLFLAGS = $(AM_LIBTOOLFLAGS) --tag CXX
+qt_nix_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+qt_nix_qt_LIBTOOLFLAGS = $(AM_LIBTOOLFLAGS) --tag CXX
 
 #locale/foo.ts -> locale/foo.qm
 QT_QM=$(QT_TS:.ts=.qm)
@@ -347,10 +347,10 @@ CLEAN_QT = $(nodist_qt_libnixqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcda qt/*
 
 CLEANFILES += $(CLEAN_QT)
 
-bitcoin_qt_clean: FORCE
-        rm -f $(CLEAN_QT) $(qt_libnixqt_a_OBJECTS) $(qt_bitcoin_qt_OBJECTS) qt/bitcoin-qt$(EXEEXT) $(LIBNIXQT)
+nix_qt_clean: FORCE
+        rm -f $(CLEAN_QT) $(qt_libnixqt_a_OBJECTS) $(qt_nix_qt_OBJECTS) qt/nix-qt$(EXEEXT) $(LIBNIXQT)
 
-bitcoin_qt : qt/nix-qt$(EXEEXT)
+nix_qt : qt/nix-qt$(EXEEXT)
 
 ui_%.h: %.ui
 	@test -f $(UIC)
