--- a/src/qt/Makefile
+++ b/src/qt/Makefile
@@ -1,9 +1,9 @@
 .PHONY: FORCE
 all: FORCE
-	$(MAKE) -C .. bitcoin_qt test_bitcoin_qt
+        $(MAKE) -C .. nix_qt test_nix_qt
 clean: FORCE
-	$(MAKE) -C .. bitcoin_qt_clean test_bitcoin_qt_clean
+        $(MAKE) -C .. nix_qt_clean test_nix_qt_clean
 check: FORCE
-	$(MAKE) -C .. test_bitcoin_qt_check
+        $(MAKE) -C .. test_nix_qt_check
 bitcoin-qt bitcoin-qt.exe: FORCE
-	 $(MAKE) -C .. bitcoin_qt
+         $(MAKE) -C .. nix_qt
