--- a/contrib/init/bitcoind.service
+++ b/contrib/init/bitcoind.service
@@ -14,10 +14,10 @@ Description=Bitcoin daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/bitcoind -daemon \
-                            -pid=/run/bitcoind/bitcoind.pid \
-                            -conf=/etc/bitcoin/bitcoin.conf \
-                            -datadir=/var/lib/bitcoind
+ExecStart=/usr/bin/nixd -daemon \
+                            -pid=/run/nixd/nixd.pid \
+                            -conf=/etc/nix/nix.conf \
+                            -datadir=/var/lib/nixd
 
 # Make sure the config directory is readable by the service user
 PermissionsStartOnly=true
@@ -27,7 +27,7 @@ ExecStartPre=/bin/chgrp bitcoin /etc/bitcoin
 ####################
 
 Type=forking
-PIDFile=/run/bitcoind/bitcoind.pid
+PIDFile=/run/nixd/nixd.pid
 Restart=on-failure
 TimeoutStopSec=600
 
