--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ test/cache/*
 
 /doc/doxygen/
 
-libbitcoinconsensus.pc
+libnixconsensus.pc
 contrib/devtools/split-debug.sh
 
 # Output from running db4 installation
